--- a/Report/assignment report.tex
+++ b/Report/assignment report.tex
@@ -140,7 +140,7 @@ More concisely, we can name the tridiagonal matrix $A$ and the right hand side v
 	\KwData{$S_0$, $X$, $r$, $T$, $\sigma$, $I$, $N$, $x_{max}$}
 	\KwResult{$c_{\text{IDS}}$, Option Premium}
 	$\Delta t = \dfrac{T}{N}$, 
-	$\Delta x = \dfrac{x_{max}}{I}$, $I_{max} = I$, $I_{min} = -I$\;
+	$\Delta x = \dfrac{x_{max}}{I}$\;
 	$a = \dfrac{\Delta t(r - q - \sigma^{2})}{2\Delta x}$\;
 	$b = 1+ r \Delta t$\;
 	$c = \dfrac{\Delta t(r-q)}{2\Delta x}$\;
@@ -153,7 +153,7 @@ More concisely, we can name the tridiagonal matrix $A$ and the right hand side v
 	with $A_{i}{i} = b, \forall i = 1, 2, \dots 2I-1$,$A_{i}{i-1} = b, \forall i = 2, \dots 2I-1$, $A_{i}{i+1} = b, \forall i = 1, 2, \dots 2I-2$.\\
 	
 	\For {$j = N-1, N-2, \dots , 0$} {
-		Generate a vector $F$ of length $(2I-1)$, with $F_{2I-1} = c\exp(-rn \Delta t)(S_{max} - X)$\;
+		Generate a vector $F$ of length $(2I-1)$, with $F_{2I-1} = c\exp(-r(T-j \Delta t))(S_{max} - X)$, $F_{i} = 0$ otherwise\;
 		$U_{j} = A^{-1} (U_{j+1} + F)$\;
 	}
 	$i_0 = round \left (\dfrac{\ln{S_0}}{\Delta x} \right )$\;
