--- a/Report/assignment report.tex
+++ b/Report/assignment report.tex
@@ -79,14 +79,16 @@ $$ \text{Use the centred space finite difference formulae : } \left. \frac{\part
 $$ \text{Use the centred space finite difference formulae : } \left. \frac{\partial^{2} u}{\partial x^{2}} \right| _{(x_{n}^{i}, t_{n})} = \frac{u_{n}^{i+1} - 2u_{n}^{i} + u_{n}^{i-1}}{(\Delta x)^{2}} + O[(\Delta x)^{2}]$$
 
 The finite difference equation is hence : 
-$$ \frac{u_{n+1}^{i} - u_{n}^{i}}{\Delta t} + O(\Delta t) + \frac{\sigma ^ {2}}{2}\frac{u_{n}^{i+1} - u_{n}^{i-1}}{2\Delta x} + (r - q - \frac{\sigma^{2}}{2})\frac{u_{n}^{i+1} - u_{n}^{i-1}}{2\Delta x} + O[(\Delta x)^{2}] -ru_{n}^{i} = 0$$
-$$ \frac{u_{n+1}^{i} - u_{n}^{i}}{\Delta t} + O(\Delta t) + O[(\Delta x)^{2}] = -\frac{\sigma ^ {2}}{2}\frac{u_{n}^{i+1} - u_{n}^{i-1}}{2\Delta x} - (r - q - \frac{\sigma^{2}}{2})\frac{u_{n}^{i+1} + u_{n}^{i-1}}{2\Delta x} + ru_{n}^{i}$$
-$$ \frac{U_{n+1}^{i} - U_{n}^{i}}{\Delta t} = rU_{n}^{i} - \frac{\sigma ^ {2}}{2}\frac{U_{n}^{i+1} - U_{n}^{i-1}}{2\Delta x} - (r - q - \frac{\sigma^{2}}{2})\frac{U_{n}^{i+1} + U_{n}^{i-1}}{2\Delta x}$$
-$$ U_{n+1}^{i} = U_{n}^{i} + \Delta t[rU_{n}^{i} - \frac{\sigma ^ {2}}{2}\frac{U_{n}^{i+1} - U_{n}^{i-1}}{2\Delta x} - (r - q - \frac{\sigma^{2}}{2})\frac{U_{n}^{i+1} + U_{n}^{i-1}}{2\Delta x}]$$
-$$ U_{n+1}^{i} = U_{n}^{i} (1+ r \Delta t) - \frac{\Delta t}{2\Delta x}[\frac{\sigma ^ {2}}{2}(U_{n}^{i+1} - U_{n}^{i-1}) + (r - q - \frac{\sigma^{2}}{2})(U_{n}^{i+1} + U_{n}^{i-1})]$$
-$$ U_{n+1}^{i} = U_{n}^{i} (1+ r \Delta t) - U_{n}^{i+1}\frac{\Delta t(r-q)}{2\Delta x} + U_{n}^{i-1}\frac{\Delta t(r - q - \sigma^{2})}{2\Delta x}, \forall I_{min}+1 \le i \le I_{max}-1$$
+$$ \frac{u_{n+1}^{i} - u_{n}^{i}}{\Delta t} + O(\Delta t) + \frac{\sigma ^ {2}}{2}\frac{u_{n}^{i+1} -2u_{n}^{i} + u_{n}^{i-1}}{(\Delta x)^{2}} + (r - q - \frac{\sigma^{2}}{2})\frac{u_{n}^{i+1} - u_{n}^{i-1}}{2\Delta x} + O[(\Delta x)^{2}] -ru_{n}^{i} = 0$$
+$$ \frac{u_{n+1}^{i} - u_{n}^{i}}{\Delta t} + O(\Delta t) + O[(\Delta x)^{2}] = -\frac{\sigma ^ {2}}{2}\frac{u_{n}^{i+1} -2u_{n}^{i} + u_{n}^{i-1}}{(\Delta x)^{2}} - (r - q - \frac{\sigma^{2}}{2})\frac{u_{n}^{i+1} - u_{n}^{i-1}}{2\Delta x} + ru_{n}^{i}$$
+$$ \frac{U_{n+1}^{i} - U_{n}^{i}}{\Delta t} = rU_{n}^{i} - \frac{\sigma ^ {2}}{2}\frac{U_{n}^{i+1} -2U_{n}^{i} + U_{n}^{i-1}}{(\Delta x)^{2}} - (r - q - \frac{\sigma^{2}}{2})\frac{U_{n}^{i+1} - U_{n}^{i-1}}{2\Delta x}$$
+$$ U_{n+1}^{i} = U_{n}^{i} + \Delta t[rU_{n}^{i} - \frac{\sigma ^ {2}}{2}\frac{U_{n}^{i+1} -2U_{n}^{i} + U_{n}^{i-1}}{(\Delta x)^{2}} - (r - q - \frac{\sigma^{2}}{2})\frac{U_{n}^{i+1} - U_{n}^{i-1}}{2\Delta x}]$$
+$$ U_{n+1}^{i} = U_{n}^{i} (1+ r \Delta t) - \frac{\Delta t}{2(\Delta x)^{2}}[\sigma ^ {2}(U_{n}^{i+1} -2U_{n}^{i} + U_{n}^{i-1}) + \Delta x(r - q - \frac{\sigma^{2}}{2})(U_{n}^{i+1} - U_{n}^{i-1})]$$
+
+
+$$ U_{n+1}^{i} = U_{n}^{i-1}[\frac{\Delta t(r - q - \frac{\sigma^{2}}{2})}{2\Delta x} -\frac{\sigma^{2}\Delta t}{2(\Delta x)^{2}}] + U_{n}^{i} [1+ r \Delta t + \frac{\sigma ^ {2} \Delta t}{(\Delta x)^{2}}] + U_{n}^{i+1}[- \frac{\Delta t(r - q - \frac{\sigma^{2}}{2})}{2\Delta x} -\frac{\sigma^{2}\Delta t}{2(\Delta x)^{2}} ]$$
 $$ U_{n+1}^{i} = aU_{n}^{i-1}+ bU_{n}^{i} + cU_{n}^{i+1} , \forall I_{min}+1 \le i \le I_{max}-1$$
-for $a = \frac{\Delta t(r - q - \sigma^{2})}{2\Delta x}, b = 1+ r \Delta t, c = \frac{\Delta t(r-q)}{2\Delta x}$\\[3mm]
+\hspace*{100pt} where $a = \gamma-\frac{\alpha}{2}, b = \beta + \alpha, c = -\gamma-\frac{\alpha}{2}, \alpha = \frac{\sigma^{2}\Delta t}{(\Delta x)^{2}}, \beta = 1+ r \Delta t, \gamma = \frac{\Delta t(r - q - \frac{\sigma^{2}}{2})}{2\Delta x}$\\[3mm]
 The boundary conditions are as follows:\\
 $$U_{n}^{I_{max}} = e^{-rn \Delta t}(\exp(I_{max}\Delta x) - X) \text{, when the underlying value is very large at} \exp(I_{max}\Delta x) \text{, with strike price at } X$$
 $$U_{n}^{I_{min}} = 0\text{, when the underlying value is very small at} \exp(I_{min}\Delta x)$$\\[3mm]
@@ -141,9 +143,12 @@ More concisely, we can name the tridiagonal matrix $A$ and the right hand side v
 	\KwResult{$c_{\text{IDS}}$, Option Premium}
 	$\Delta t = \dfrac{T}{N}$, 
 	$\Delta x = \dfrac{x_{max}}{I}$\;
-	$a = \dfrac{\Delta t(r - q - \sigma^{2})}{2\Delta x}$\;
-	$b = 1+ r \Delta t$\;
-	$c = \dfrac{\Delta t(r-q)}{2\Delta x}$\;
+	$\alpha = \frac{\Delta t(r - q - \frac{\sigma^{2}}{2})}{2\Delta x}$\;
+	$\beta = 1+ r \Delta t$\;
+	$\gamma = \frac{\sigma^{2}\Delta t}{2(\Delta x)^{2}}$\;
+	$a = \alpha - \gamma$\;
+	$b = \beta + \alpha$\;
+	$c = -\alpha - \gamma$\;
 	
 	\For {$i = -I+1, -I+2, \dots, I-2, I-1 $} {
 		$U_{N}^{i} = max(\exp(i\Delta x) - X, 0)$\;
