--- a/Report/assignment report.tex
+++ b/Report/assignment report.tex
@@ -310,6 +310,36 @@ Next up, we implemented the Monte Carlo simulation algorithm for estimating the 
 
 \subsection{Results from different number of price-path bundles and Comment}
 
+Using the set of parameters, we obtain the following results in one of runs:
+
+\begin{center}
+	\begin{tabular}{| c | c | c | c |}
+		\hline $X$ & $N$ & Option price estimate & Standard errors\\
+		[0.5ex]
+		\hline 8.5 & 30 & 0.86687 & 0.042158\\
+		\hline 8.5 & 1000 & 0.87561 & 0.0095148\\
+		\hline 8.5 & 10000 & 0.87745 & 0.0028249\\
+		\hline 8.5 & 100000 & 0.87833 & 0.00081011\\
+		\hline
+		\hline 9.5 & 30 & 0.7149 & 0.089602\\
+		\hline 9.5 & 1000 & 0.71379 & 0.014814\\
+		\hline 9.5 & 10000 & 0.71402 & 0.0033345\\
+		\hline 9.5 & 100000 & 0.71369 & 0.0013023\\
+		\hline
+		\hline 10.5 & 30 & 0.51049 & 0.088169\\
+		\hline 10.5 & 1000 & 0.50082 & 0.013599\\
+		\hline 10.5 & 10000 & 0.50434 & 0.0038309\\
+		\hline 10.5 & 100000 & 0.50371 & 0.0013951\\
+		\hline
+	\end{tabular}
+\end{center}
+
+From the option price estimate for different strike prices, we do not observe an explicit overall increasing or decreasing trend. However, as $N$ gets larger, the change in estimated option price compared to the previous value of $N$ gets to decrease. 
+
+This trend is more evidenced in the value of standard errors, which effectively decreased from smaller values of $N$ to larger values. Each time when $N$ increased by $10$ times, the value of standard errors is lowered to approximately between $\dfrac{1}{4}$ to $\dfrac{1}{3}$ of the previous value, which is similar to the value of $\dfrac{1}{\sqrt{10}}$.
+
+
 \subsection{Variance Control and Effectiveness}
+
 
 \end{document}
